--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -4,8 +4,8 @@
     <div class="form-map">
     <h2>住所を検索して見よう！</h1>
     </div>
-    <div class="map">
-    googlemap表示
+    <div class="map" id="map" >
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB26zZUjgJoBscV7AbWmCtRWwHwZ535Fcw" async defer></script>
     </div>
   </div>
   <div class="contents">
