googlemapsAPI環境変数設定

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -5,7 +5,7 @@
     <h2>住所を検索して見よう！</h1>
     </div>
     <div class="map" id="map" >
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB26zZUjgJoBscV7AbWmCtRWwHwZ535Fcw" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_KEY'] %>" async defer></script>
     </div>
   </div>
   <div class="contents">
