--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -4,7 +4,8 @@
     <div class="form-map">
     <h2>住所を検索して見よう！</h1>
     </div>
-    <div class="map" id="map" >
+    <div class="map">
+    <div id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_KEY'] %>" async defer></script>
     </div>
   </div>
