--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,43 @@
-<h2>Sign up</h2>
-
-<%= form_for(@user, url: user_registration_path) do |f| %>
-  <%= render "devise/shared/error_messages", resource: @user %>
-
-  <div class="field">
-    <%= f.label :nickname %><br />
-    <%= f.text_field :nickname, autofocus: true %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "プロフィール情報入力へ" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="form-wrapper">
+  <div class="form-title">
+    <h2 class="form-title-name">会員登録しよう！<h2>
+  </div>  
+  <%= form_with model: @user, url: user_registration_path, class: "form-wrap", local: true do |f| %>
+    <%= render "shared/error_messages", model: f.object %>
+    <div class="form-group">
+      <div class="form-label">
+        <%= f.label :nickname, "ニックネーム（必須）", class: "form-label-name" %>
+      </div> 
+      <div class="form-input"> 
+        <%= f.text_field :nickname, autofocus: true, placeholder: "ニックネーム", class: "form-input-area", id: "nickname" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="form-label">
+        <%= f.label :email, "Email（必須）", class: "form-label-name" %>
+      </div> 
+      <div class="form-input"> 
+        <%= f.email_field :email, placeholder: "例: example@gmail.com", class: "form-input-area", id: "email" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="form-label">
+        <%= f.label :password, "パスワード（必須）", class: "form-label-name" %>
+      </div> 
+      <div class="form-input"> 
+        <%= f.password_field :password, class: "form-input-area", autocomplete: "new-password", id: "password" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="form-label">
+        <%= f.label :password_confirmation, "確認用パスワード（必須）", class: "form-label-name" %>
+      </div> 
+      <div class="form-input"> 
+        <%= f.password_field :password_confirmation, class: "form-input-area", autocomplete: "new-password", id: "password-confirmation" %>
+      </div>
+    </div>
+    <div class="form-submit">
+      <%= f.submit "プロフィール情報入力へ", class: "form-submit-btn" %>
+    </div>
+  <% end %>
+</div>
