--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
         <%= f.label :password, "パスワード（必須）", class: "form-label-name" %>
       </div> 
       <div class="form-input"> 
-        <%= f.password_field :password, class: "form-input-area", autocomplete: "new-password", id: "password" %>
+        <%= f.password_field :password, placeholder: "6文字以上の半角英数字", class: "form-input-area", autocomplete: "new-password", id: "password" %>
       </div>
     </div>
     <div class="form-group">
@@ -33,7 +33,7 @@
         <%= f.label :password_confirmation, "確認用パスワード（必須）", class: "form-label-name" %>
       </div> 
       <div class="form-input"> 
-        <%= f.password_field :password_confirmation, class: "form-input-area", autocomplete: "new-password", id: "password-confirmation" %>
+        <%= f.password_field :password_confirmation, placeholder: "パスワード確認", class: "form-input-area", autocomplete: "new-password", id: "password-confirmation" %>
       </div>
     </div>
     <div class="form-submit">
