--- a/app/assets/stylesheets/users/registration.css
+++ b/app/assets/stylesheets/users/registration.css
@@ -2,28 +2,32 @@
 .form-wrapper {
   height: 100vh;
   width: 100vw;
-  background-color: lightyellow;
-}
-
-.form-title {
-  text-align: center;
-  padding:30px 0; 
+  background-color: lightgrey;
 }
 
 .form-wrap {
+  height: 100%;
   width: 50%;
   margin: 0 auto;
+  background-color: mintcream;
 }
 
+.form-title {
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: palegreen;
+}
 .form-group {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .form-label {
-  margin-bottom: 2px;
+  margin-bottom: 5px;
 }
 
 .form-input-area {
@@ -31,18 +35,27 @@
   padding: 5px;
   border-radius: 5px;
   background-color: white;
+  width: 250px;
 }
 
 .form-submit {
-  display: flex;
-  justify-content: center;
-  padding-top: 10px;
+  margin-top: 30px;
 }
 
 .form-submit-btn {
-  width: 200px;
-  text-align: center;
+  width: 250px;
   background-color:lightblue;
   border-radius: 5px;
   padding: 5px;
+}
+
+.form-select-btn {
+  width: 250px;
+  background-color: lightgrey;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.form {
+  height: calc(100% - 200px);
 }
