--- a/app/views/devise/registrations/new_profile.html.erb
+++ b/app/views/devise/registrations/new_profile.html.erb
@@ -1,8 +1,8 @@
 <div class="form-wrapper">
-  <div class="form-title">
-    <h2 class="form-title-name">プロフィールを登録しよう！<h2>
-  </div>  
   <%= form_with model: @profile, class: "form-wrap", local: true do |f| %>
+    <div class="form-title">
+      <h2 class="form-title-name">プロフィールを登録しよう！<h2>
+    </div>  
     <%= render "shared/error_messages", model: f.object %>
     <div class="form-group">
       <div class="form-label">
@@ -25,11 +25,13 @@
         <%= f.label :sex_id, "性別（任意）", class: "form-label-name" %>
       </div> 
       <div class="form-input"> 
-        <%= f.collection_select :sex_id, Sex.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-input-area", autocomplete: "new-password", id: "sex-id" %>
+        <%= f.collection_select :sex_id, Sex.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select-btn", autocomplete: "new-password", id: "sex-id" %>
       </div>
     </div>
-    <div class="form-submit">
-      <%= f.submit "新規登録", class: "form-submit-btn" %>
-    </div>
+    <div class="form-group">
+      <div class="form-submit">
+        <%= f.submit "新規登録", class: "form-submit-btn" %>
+      </div>
+    </div>  
   <% end %>
 </div>
