--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -2,10 +2,15 @@
 <div class="wrapper">
   <div class="map-wrapper">
     <div class="form-map">
-    <h2>住所を検索して見よう！</h1>
+    <h2>住所を検索して見よう！</h2>
+    <%= form_with url: search_map_stores_path, method: :get do |f| %>
+      <%= f.text_field :address, class: "form-input-area"%>
+      <%= f.submit '地図検索', class: "form-submit-btn" %>
+    <% end %>  
     </div>
     <div class="map">
     <div id="map"></div>
+    <script>let mapInstance</script>
     <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_KEY'] %>" async defer></script>
     </div>
   </div>
