店舗情報登録機能実装

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -19,7 +19,7 @@
         <h2>お気に入りの飲食店を登録しよう！</h2>
       </div>
       <div class="store-link">
-        <%= link_to '飲食店を追加！', '#', class: 'store-btn' %>
+        <%= link_to '飲食店を追加！', new_store_path, class: 'store-btn' %>
       </div>
     </div>
     <div class="community-content">
