--- a/app/assets/stylesheets/users/registration.css
+++ b/app/assets/stylesheets/users/registration.css
@@ -6,7 +6,7 @@
 }
 
 .form-wrap {
-  height: 100%;
+  height: 100vh;
   width: 50%;
   margin: 0 auto;
   background-color: mintcream;
@@ -54,4 +54,12 @@
   background-color: lightgrey;
   border-radius: 5px;
   padding: 5px;
+}
+
+.image-list {
+  display: flex;
+}
+.preview-image {
+  height: 200px;
+  width: 200px;
 }
