--- a/app/views/devise/registrations/new_profile.html.erb
+++ b/app/views/devise/registrations/new_profile.html.erb
@@ -25,7 +25,7 @@
         <%= f.label :sex_id, "性別（任意）", class: "form-label-name" %>
       </div> 
       <div class="form-input"> 
-        <%= f.collection_select :sex_id, Sex.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select-btn", autocomplete: "new-password", id: "sex-id" %>
+        <%= f.collection_select :sex_id, Sex.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select-btn", id: "sex-id" %>
       </div>
     </div>
     <div class="form-group">
