--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
       <%= link_to 'ログイン', new_user_session_path, class: 'link' %>
       <%= link_to '新規登録', new_user_registration_path, class: 'link' %>
       <% end %>
-      <%= link_to '飲食店を追加する' , '#', class: 'link' %>
+      <%= link_to '飲食店を追加する' , new_store_path, class: 'link' %>
       <%= link_to 'コミュニティ一覧へ', '#', class: 'link'%>
   </div>
 </header>
