--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -1,6 +1,6 @@
 .header {
   height: 100px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   background-color: lightskyblue;
 }
@@ -19,7 +19,7 @@
 }
 
 .links {
- width: calc(100vw - 30%);
+ width: 70%;
  display: flex;
  align-items: center;
  justify-content: space-around;
