--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -35,3 +35,5 @@
     </div>
   </div>
 </div>
+<div id="map"></div>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_KEY'] %>" async defer></script>
