store/show（仮）ページ作成

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,39 +1,69 @@
+<%= render 'shared/header'%>
 <div class="store-show">
   <div class="store-box">
     <div class="store-title">
       <div class="store-name">
         <%= @store.name %>
       </div>
-      <div class="store-url">
-        <%= @store.url%>
-      </div>  
     </div>
-    <div class="store-image">
-      <%  @store.images.each do |image|%>
-      <%= image_tag image %>
+    <div class="store-images">
+      <%  @store.store_images.each do |image|%>
+      <%= image_tag image.variant(resize: '300x300'), class: "store-image" %>
       <% end%>
     </div>
     <div class="store-categorys">
-      <div class="store-genre"><%= @store.genre.name %></div>
-      <div class="store-price"><%= @store.price.name%></div>
-      <div class="store-user"><%= @store.user.nickname%></div>
+      <div class="store-genre"><%= "ジャンル: #{@store.genre.name}" %></div>
+      <div class="store-price"><%= "価格帯: #{@store.price.name}"%></div>
+      <div class="store-user"><%= "#{@store.user.nickname}さんオススメ！"%></div>
     </div>
   </div>
   <div class="store-info-box">
     <div class="store-info">
-    <%= @store.info %>
+      <div class="store-url">
+        <%= "URL: #{@store.url}" %>
+      </div>
+      <div class="store-info-text">
+        <%= @store.info %>
+      </div>  
     </div>
+    <div class="store-map">
+      <div id="map"></div>
+    </div>  
   </div>
   <div class="comment-box">
     <div class="comment-field">
     </div>
     <div class="comment-form">
-      <div class="form_input_area">
+    <%= form_with(model: [@store, @comment], id: "comment-form")  do |f| %>
+    <%= render "shared/error_messages", model: f.object %>
+      <div class="form_group">
+        <div class="form-label">
+          <%= f.label :comment, "コメント入力欄(コメントか画像どちらか必須）", class: "form-label-name" %>
+        </div> 
+        <div class="form-input"> 
+          <%= f.text_field :comment, placeholder: "例: この料理もオススメです！", class: "form-input-area", id: "comment" %>
+        </div>
       </div>
-      <div class="form_submit_btn">
+      <div class="form_group">
+        <div class="form-label">
+          <%= f.label :comment_images, "画像", class: "form-label-name" %>
+        </div> 
+        <div class="form-input"> 
+          <%= f.file_field :icomment_mages, name: "comment[comment_images][]",  class: "form-image-btn", id: "images" %>
+        </div>        
       </div>
+      <div class="image-list", id="image-list"></div>      
+      <div class="form_group">
+        <div class="form-submit">
+          <%= f.submit "コメントする", class: "form-submit-btn" %>
+        </div>
+      </div>
+    <% end %>
     </div>
   </div>
 </div>
-<div id="map"></div>
+<div class="store-footer">
+  <%= link_to "編集する", "#"%>
+  <%= link_to "削除する", "#"%>
+</div>
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_KEY'] %>" async defer></script>
