--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -54,10 +54,10 @@
     </div>
     <div class="form-group">
       <div class="form-label">
-        <%= f.label :images, "画像（任意）", class: "form-label-name" %>
+        <%= f.label :store_images, "画像（任意）", class: "form-label-name" %>
       </div> 
       <div class="form-input"> 
-        <%= f.file_field :images, name: "store[images][]",  class: "form-image-btn", id: "images" %>
+        <%= f.file_field :store_images, name: "store[store_images][]",  class: "form-image-btn", id: "store_images" %>
       </div>
     </div>  
     <div class="image-list", id="image-list"></div>      
