--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
       <%= link_to 'ログアウト', destroy_user_session_path, method: :delete,  class: 'link' %>
     <%# ログアウト時   %>
       <% else %>
-      <%= link_to 'ゲストさん', new_user_registration_path, class:'link'%>
+      <%= link_to 'ゲストさん', new_user_session_path, class:'link'%>
       <%= link_to 'ログイン', new_user_session_path, class: 'link' %>
       <%= link_to '新規登録', new_user_registration_path, class: 'link' %>
       <% end %>
