--- a/app/assets/stylesheets/stores/show.css
+++ b/app/assets/stylesheets/stores/show.css
@@ -1,63 +1,149 @@
 .store-show {
-  height: 100vh;
+  height: 100%;
   width: 100%;
-  overflow: scroll;
-  background-color: lemonchiffon;
+  background-color: #f5f5f5;
+}
+
+.store-wrapper {
+  width: 80%;
+  margin: 0 auto;
+  background-color: white;
+  margin-top: 50px;
 }
 
 .store-box {
   width: 100%;
-  background-color: lightblue;
 }
 
 .store-title {
-
+  height: 100px;
 }
 
 .store-name {
   font-size: 36px;
-  text-align: center;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .store-images {
   display: flex;
-  justify-content: space-around;
+  width: 100%;
+  justify-content: space-between;
   overflow-x: scroll;
 }
 
+.store-image {
+  margin: 0 20px;
+}
+
+.temporary-image {
+  height: 300px;
+  width: 300px;
+}
 .store-categorys {
+  height: 100px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   font-size: 24px;
+  margin-top: 30px;
+}
+
+.store-genre {
+  background-color: lightgray;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.store-price{
+  background-color: lightgray;
+  border-radius: 20px;
+  padding: 20px; 
+}
+
+.store-user{
+  background-color: lightgray;
+  border-radius: 20px;
+  padding: 20px; 
 }
 
 .store-info-box {
   width: 100%;
+  height: 300px;
   display: flex;
-  background-color: lightgreen;
+  margin-top: 50px;
+  padding: 20px;
 }
 
 .store-info {
-  width: 60%;
+  width: 50%;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-right: 20px;
+  background-color: rgba(211, 211, 211, 0.209);
+}
+
+.store-url {
+  font-size: 16px;
+  border-bottom: 1px solid black;
+  border-radius: 5px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.store-info-text {
+  font-size: 16px;
+  padding: 10px;
+  overflow-y: scroll;
 }
 
 .store-map {
-  width: 40%;
+  width: 50%;
+}
+
+#store-map {
+  height: 100%;
+  border: 1px solid lightgray;
+  border-radius: 5px;
 }
 
 .comment-box {
-
+  width: 100%;
+  padding: 20px;
 }
 
-.comment-form {
-  display: flex;
-  justify-content: center;
-
+.comment-field {
+  height: 400px;
+  width: 60%;
+  padding: 20px;
+  overflow-y: scroll;
+  background-color: rgba(211, 211, 211, 0.196);
+  margin: 0 auto;
+  margin-top: 50px;
 }
 
-.store-footer {
+.comment-form-wrapper {
+  margin-top: 30px;
+  padding: 20px;
+}
+
+.store-show-links {
+  height: 100px;
   display: flex;
   justify-content: space-around;
-  font-size: 20px;
-  background-color: lightsalmon;
+  align-items: center;
+  font-size: 24px;
+  padding-bottom: 30px;
+}
+
+.store-show-link {
+  padding: 20px;
+  background-color: lightgrey;
+  border-radius: 20px;
+  font-size: 24px;
+  color: black;
 }
