--- a/app/views/devise/registrations/new_profile.html.erb
+++ b/app/views/devise/registrations/new_profile.html.erb
@@ -1,4 +1,5 @@
 <div class="form-wrapper">
+  <%= render "shared/second_header" %>
   <%= form_with model: @profile, class: "form-wrap", local: true do |f| %>
     <div class="form-title">
       <h2 class="form-title-name">プロフィールを登録しよう！<h2>
@@ -6,7 +7,7 @@
     <%= render "shared/error_messages", model: f.object %>
     <div class="form-group">
       <div class="form-label">
-        <%= f.label :address, "住所（任意）", class: "form-label-name" %>
+        <%= f.label :address, "住所", class: "form-label-name" %><span class="form-any">任意</span>
       </div> 
       <div class="form-input"> 
         <%= f.text_field :address, autofocus: true, placeholder: "例: 東京都渋谷区神南１−１−１", class: "form-input-area", id: "address" %>
@@ -14,7 +15,7 @@
     </div>
     <div class="form-group">
       <div class="form-label">
-        <%= f.label :age, "age（任意）", class: "form-label-name" %>
+        <%= f.label :age, "年齢", class: "form-label-name" %><span class="form-any">任意</span>
       </div> 
       <div class="form-input"> 
         <%= f.text_field :age, placeholder: "例: 20", class: "form-input-area", id: "age" %>
@@ -22,7 +23,7 @@
     </div>
     <div class="form-group">
       <div class="form-label">
-        <%= f.label :sex_id, "性別（任意）", class: "form-label-name" %>
+        <%= f.label :sex_id, "性別", class: "form-label-name" %><span class="form-any">任意</span>
       </div> 
       <div class="form-input"> 
         <%= f.collection_select :sex_id, Sex.all, :id, :name, {include_blank: "選択して下さい"}, class: "form-select-btn", id: "sex-id" %>
@@ -34,4 +35,5 @@
       </div>
     </div>  
   <% end %>
+    <%= render "shared/second_footer" %>
 </div>
