--- a/app/assets/stylesheets/users/form.css
+++ b/app/assets/stylesheets/users/form.css
@@ -96,6 +96,23 @@
   font-weight: bold;
 }
 
+.check-box-images {
+  margin-top: 50px;
+  width: 720px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.check-box-image {
+  width: 50%;
+  padding: 0 0 30px 50px;
+}
+
+.check-box-notice {
+  font-weight: bold;
+  margin: 10px 0;
+}
 .image-list {
   margin-top: 50px;
   width: 720px;
