--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -55,13 +55,13 @@
     </div>
     <div class="form-group">
       <div class="form-label">
-        <%= f.label :store_images, "画像", class: "form-label-name" %><span class="form-any">任意</span>
+        <%= f.label :store_images, "画像", class: "form-label-name" %><span class="form-any">任意(複数枚可）</span>
       </div> 
       <div class="form-input"> 
-        <%= f.file_field :store_images, name: "store[store_images][]",  class: "form-image-btn", id: "store_images" %>
+        <%= f.file_field :store_images, name: "store[store_images][]", multiple: true,   class: "form-image-btn", id: "store_images" %>
       </div>
     </div>  
-    <div class="image-list", id="image-list"></div>      
+    <%# <div class="image-list", id="image-list"></div>       %>
     <div class="form-group">
       <div class="form-submit">
         <%= f.submit "店舗登録", class: "form-submit-btn" %>
