--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -52,10 +52,10 @@
         </div>
         <div class="form-group">
           <div class="form-label">
-            <%= f.label :comment_images, "画像", class: "form-label-name" %>
+            <%= f.label :comment_images, "画像", class: "form-label-name" %><span class="form-any">複数枚可</span>
           </div> 
           <div class="form-input"> 
-            <%= f.file_field :icomment_mages, name: "comment[comment_images][]",  class: "form-image-btn", id: "comment-images" %>
+            <%= f.file_field :icomment_mages, multiple: true, name: "comment[comment_images][]",  class: "form-image-btn", id: "comment-images" %>
           </div>        
         </div>
         <div class="image-list", id="image-list"></div>      
