店舗詳細コメント機能非同期実装

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -37,7 +37,7 @@
     </div>
     <div class="comment-box">
       <div class="comment-field">
-        <div class="comment">
+        <div class="comment" id="comment-input">
         <% @comments.each do |comment| %>
           <div class="comment-upper">
             <div class="comment-user"><%= "#{comment.user.nickname}さん" %></div>
