--- a/app/views/stores/search_map.js.erb
+++ b/app/views/stores/search_map.js.erb
@@ -9,5 +9,13 @@
     map: mapInstance,
     position: pos
   });
+  let infoWindow = new google.maps.InfoWindow({
+  content: `<div class="mapinfo">
+  <p>検索結果<p>
+  <p><%= @address %></p>
+  </div>`
+  });
+    infoWindow.open(mapInstance, marker);
+
   document.getElementById("address").value = "";
 })()
